# ChangeLog for x11-libs/libXinerama
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXinerama/ChangeLog,v 1.49 2009/10/03 15:29:10 scarabeus Exp $

*libXinerama-1.1 (03 Oct 2009)

  03 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +libXinerama-1.1.ebuild:
  Version bump for xorg-server 1.7.

  23 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  libXinerama-1.0.3.ebuild:
  Stable on alpha for xorg-server-1.5/xorg-x11-7.4

  15 May 2009; Raúl Porcel <armin76@gentoo.org> libXinerama-1.0.3.ebuild:
  arm/s390 stable

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> libXinerama-1.0.3.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> libXinerama-1.0.3.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  libXinerama-1.0.3.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> libXinerama-1.0.3.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> libXinerama-1.0.3.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libXinerama-1.0.3.ebuild:
  Marking libXinerama-1.0.3 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libXinerama-1.0.3.ebuild:
  Marking libXinerama-1.0.3 ppc stable for bug 251832

*libXinerama-1.0.3 (10 Mar 2008)

  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +libXinerama-1.0.3.ebuild:
  Bump.

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -libXinerama-1.0.1.ebuild:
  Clean up.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libXinerama-1.0.2.ebuild:
  Stable on sparc wrt #175465

  06 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
  Fix up changelog to stop gentoo.tamperd.net/stable/ warning.

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> libXinerama-1.0.2.ebuild:
  Stable on ppc; bug #175465.
