@@ -3,6 +3,6 @@ DIST libXinerama-1.0.3.tar.bz2 236386 RMD160 99115fedb0930a6acb5450bfabfe7416159
 DIST libXinerama-1.1.tar.bz2 245133 RMD160 2f5a9dbad4a6db093838e99b0f991a387a553c62 SHA1 5f445194ef3318f66c287c0c69f778988a3f9266 SHA256 e0d39e74c2e131b44cc98dd4910165c9b8d937df93be58e6afb7c2a56772bf34
 EBUILD libXinerama-1.0.2.ebuild 526 RMD160 aa54e1875335abe0c75380f42deddb29a53c09ae SHA1 e63d414cc493b187e583e97adc1d9e22a4c24f9b SHA256 e7be631790c18b9d87ae1e815eef907cb1219fb897ac595759260f52c9ee0e59
 EBUILD libXinerama-1.0.3.ebuild 573 RMD160 4d963768301043a5c4e3347477cd511a105e3034 SHA1 1195579fa8b53bce3f8fc046ef3b8e9206d75e27 SHA256 0f05f452250371c9b855b9d510f8414dcadd905d6e765b4a2d97cee25e45a584
-EBUILD libXinerama-1.1.ebuild 598 RMD160 b0cf69e9503ee8b5d251a7244d3a3e66d1aa303a SHA1 d52f2e4f1e6ce166cd082b498ed559abf5899cd7 SHA256 bf8925132075b4eedd9a151f141ca878fd3ae1e9d4b09518227229f171838c30
-MISC ChangeLog 5970 RMD160 68c2a243ae34dd05cf2d68f2267cd84fb1af6236 SHA1 dd2530c0c8afc392b3f81311ac78b794237efc2b SHA256 9f29efafd9f469e9a743b9896e2f605d467c3a3f43f11ee5dac25a34ac09ab1f
+EBUILD libXinerama-1.1.ebuild 666 RMD160 a4c935dd46e69d04467f7526b0fab99ccc1c3994 SHA1 c0221c8afdb6c961bb8ab45a0e259f3205e7bf90 SHA256 f5fdd4fec787ed46814952e75ae03289bfb52f8ca0b571b30497b21c0b32abb9
+MISC ChangeLog 6155 RMD160 e30cf8c865395ed9c9fe7f1b68fddbff4af7523d SHA1 71077b5d8e2772ece27fee009caebfcd0d58af17 SHA256 af957c7221f76cee7a73b2c53986c1525fd77fc24362986e75f818335842312d
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
